# pm

./: .gitignore  PROJECT_PM.md  README.md  install.sh  install_gh.sh  main.py  pyproject.toml  run_configure.sh  run_import.sh
.gemini/: GEMINI.md
pm/: main.py
