[tool.poetry]
name = "pm-cli"
version = "0.1.0"
description = "Intelligent Project Manager CLI to track and summarize project development."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.12.3"}
requests = "^2.31.0"
rich = "^13.7.1"

[tool.poetry.scripts]
pm = "pm.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"